unpackaged/main/default/objects/litify_docs__Input_Rule_Group_Junction__c/litify_docs__Input_Rule_Group_Junction__c.object-meta.xml
<CustomObject>
    <description>Junction between Input and Rule Group</description>
    <label>Merge Input Rule Group Junction</label>
    <nameField>
        <displayFormat>IRGJ-{000000}</displayFormat>
        <label>Merge Input Rule Group Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Input Rule Group Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>