unpackaged/main/default/objects/litify_docs__Input_Rule_Group_Junction__c/fields/litify_docs__Input__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Input__c</fullName>
    <description>Master Detail to Input</description>
    <inlineHelpText>Master Detail to Input</inlineHelpText>
    <label>Input</label>
    <referenceTo>litify_docs__Input__c</referenceTo>
    <relationshipName>Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>