unpackaged/main/default/objects/litify_docs__Input_Rule_Group_Junction__c/fields/litify_docs__Rule_Group__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Rule_Group__c</fullName>
    <description>Junction from Input to Rule Group.</description>
    <inlineHelpText>Junction from Input to Rule Group.</inlineHelpText>
    <label>Rule Group</label>
    <referenceTo>litify_docs__Rule_Group__c</referenceTo>
    <relationshipLabel>Input Rule Group Junctions</relationshipLabel>
    <relationshipName>Input_Rule_Group_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>