unpackaged/main/default/objects/litify_docs__Input_Rule_Group_Junction__c/fields/litify_docs__Template_Scope__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Template_Scope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Template record to scope the Rule Group to, since an input can belong to many templates; improves reusability of inputs.</description>
    <inlineHelpText>The Template record to scope the Rule Group to, since an input can belong to many templates; improves reusability of inputs.</inlineHelpText>
    <label>Template Scope</label>
    <referenceTo>litify_docs__Template__c</referenceTo>
    <relationshipLabel>Input Rule Group Junctions</relationshipLabel>
    <relationshipName>Input_Rule_Group_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>